panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__initialisation__struct__test_braced_init_of_struct_of_array_of_char_pointer.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/initialisation/struct/test_braced_init_of_struct_of_array_of_char_pointer.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: excess element in struct initialiser
   ╭─[panko/tests/cases/execute/initialisation/struct/test_braced_init_of_struct_of_array_of_char_pointer.c:8:12]
   │
 8 │     } t = {"hello world"};
   │       ┬    ──────┬──────  
   │       │          ╰──────── trying to initialise element at index 1 for `struct T~2 complete`
   │       │                   
   │       ╰─────────────────── while initialising this variable
───╯
